--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,10 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  customColor1:       #0062c7,
+  customColor2:       #e06637,
+  
 );
 
 
