Insert e update de distribuidora

--- a/src/components/endereco/endereco.scss
+++ b/src/components/endereco/endereco.scss
@@ -1,4 +1,4 @@
-page-endereco {
+endereco {
     ion-row{
         margin: 0;
         padding: 0;
@@ -8,5 +8,4 @@ page-endereco {
         margin: 0;
         padding: 0;
     }
-
 }
