Cadastro de Distribuidora e Resize image finalizado.

--- a/src/components/input-photo/input-photo.html
+++ b/src/components/input-photo/input-photo.html
@@ -1,9 +1,6 @@
-<div>
-  <div class="final-img" *ngIf="data">
-    <img [src]="data.image" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
-  </div>
-  <label for="file-upload" class="button button-md button-default button-default-md button-block button-block-md button-label">
-            {{ 'SELECT_PHOTO' | translate }}
-          </label>
-  <input id="file-upload" type="file" (change)="fileChangeListener($event)">
+<div text-center class="img-photo">
+    <img *ngIf="value" [src]="value"/>
+    <img *ngIf="!value" src="assets/img/appicon.png"/>
 </div>
+<button *ngIf="value"  ion-button block (click)="changePhoto()">{{ 'CHANGE_PHOTO' | translate }}</button>
+<button *ngIf="!value"  ion-button block (click)="changePhoto()">{{ 'SELECT_PHOTO' | translate }}</button>
