controle de acesso

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,3 +21,9 @@
 .error-message {
     color: #f65555 !important
 }
+
+.image-profile {
+    border-radius: 50%;
+    max-height: 50px;
+    max-width: 50px;
+} 
