--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,23 @@
-<ion-menu [content]="content">
-    <ion-header>
-        <ion-toolbar>
-            <ion-title>Pages</ion-title>
-        </ion-toolbar>
-    </ion-header>
+<ion-split-pane>
+    <ion-menu class="menu" [content]="content" when="xs" [enabled]="usuarioSrvc.usuarioAtual">
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>Pages</ion-title>
+            </ion-toolbar>
+        </ion-header>
 
-    <ion-content>
-        <ion-list *ngIf="usuarioSrvc.usuarioAtual?.usr_menus">
-            <button menuClose ion-item *ngFor="let m of usuarioSrvc.usuarioAtual.usr_menus" (click)="openPage(m)">
-          {{m.mnu_nome}}
-        </button>
-        </ion-list>
-    </ion-content>
-</ion-menu>
-<ion-nav #content [root]="rootPage"></ion-nav>
+        <ion-content class="item-menu">
+            <ion-list *ngIf="usuarioSrvc.usuarioAtual?.usr_menus">
+                <ion-item class="item-menu-base">
+                    <button  class="item-menu-button" menuClose ion-item *ngFor="let m of usuarioSrvc.usuarioAtual.usr_menus" (click)="openPage(m)">
+                        {{m.mnu_nome}}
+                    </button>
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+    <ion-nav main [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+</ion-split-pane>
 <ion-header>
     <ion-navbar color="customColor1">
         <ion-title (click)="show()">{{ 'APP_NAME' | translate }}</ion-title>
@@ -24,12 +28,20 @@
         <ion-buttons (click)="show()" end *ngIf="usuarioSrvc.usuarioAtual">
             <button ion-button icon-only>{{ usuarioSrvc.usuarioAtual.usr_nome }}</button>
             <button ion-button icon-only>
-          <img *ngIf="usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" [src]="usuarioSrvc.usuarioAtual.usr_fb_foto.data.url"/>
-          <img *ngIf="!usuarioSrvc.usuarioAtual.usr_fb_foto" (click)="show()" class="image-profile" src="assets/img/user-placeholder-1.jpg"/>
-        </button>
+                <img *ngIf="usuarioSrvc.usuarioAtual.usr_fb_foto" class="image-profile" [src]="usuarioSrvc.usuarioAtual.usr_fb_foto.data.url"
+                />
+                <img *ngIf="!usuarioSrvc.usuarioAtual.usr_fb_foto" (click)="show()" class="image-profile" src="assets/img/user-placeholder-1.jpg"
+                />
+            </button>
             <button ion-button icon-only>
-          <ion-icon name="more"></ion-icon>
-        </button>
+                <ion-icon name="more"></ion-icon>
+            </button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
+
+<ion-footer color="customColor1">
+    <ion-toolbar color="customColor1">
+        <button ion-button block (click)="signupDistribuidora()" color="customColor1">{{ 'SIGNUP_DISTRIBUTOR' | translate }}</button>
+    </ion-toolbar>
+</ion-footer>
