--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -27,3 +27,24 @@
     max-height: 50px;
     max-width: 50px;
 } 
+.menu {
+    width: 250px !important; 
+}
+.item-menu {
+    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
+    color: white;
+}
+
+.item-menu-base {
+    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
+    border-bottom: 1px solid lighten($color: color($colors, customColor1), $amount: 10%) !important;
+    color: white;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    
+}
+
+.item-menu-button {
+    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
+    color:whitesmoke;
+}
+
