--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -92,7 +92,6 @@ $colors: (
 .content-desktop {
   width: 100% !important;     
   margin-top: 55px !important;
-  margin-bottom: 55px !important;
 }
 
 @media (min-width: 576px) {
@@ -166,3 +165,5 @@ $colors: (
     border-radius: 5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+
+$modal-inset-min-height-large: 300px;
