--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -20,7 +20,7 @@ page-welcome {
       position: relative;
       //background: url('../assets/img/splashbg.png') no-repeat transparent;
       background-size: cover;
-      height: 45%;
+      height: 60%;
       z-index: 1;
       background-repeat: repeat-x;
       animation: animatedBackground 40s linear infinite;
@@ -34,7 +34,7 @@ page-welcome {
     .splash-info {
       position: relative;
       z-index: 2;
-      margin-top: 64px;
+      margin-top: 30vh;
       text-align: center;
     }
     .splash-logo {
