--- a/src/pages/painel-controle-adm/painel-controle-adm/grupo-usuario/grupo-usuario.scss
+++ b/src/pages/painel-controle-adm/painel-controle-adm/grupo-usuario/grupo-usuario.scss
@@ -1,3 +1,27 @@
 page-grupo-usuario {
-
+    .perfil-grupo{
+        position: relative; 
+        width: 80px;
+        height: 80px;
+        button {
+            background-color: #efefef;
+            margin-right: 0px;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            right: 2px;
+            top: 2px;
+            border: solid 1px #cccccc;
+            text-align: center;
+            font-size: 10px;
+            color: #999999;
+        }
+        img {
+            margin: 10px auto 0px auto;
+            width: 50px;
+            height: 50px;
+            border-radius: 0px;
+        }
+    }
 }
