--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor.scss
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor.scss
@@ -1,3 +1,9 @@
 page-painel-controle-distribuidor {
-
+    #map {
+        width: 100%;
+        height: 70vh;
+      }
+      .transparent-card{
+        background-color: transparent;
+    }   
 }
