Correção de Bugs

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,11 +12,11 @@
         </ion-content>
         <ion-footer color="customColor1">
             <ion-toolbar color="customColor1" class="main-footer">
-                <ion-buttons end small>
+                <!-- <ion-buttons end small>
                     <button ion-button icon-only (click)="reloadMenu()">
                         <ion-icon class="button-small" name="refresh"></ion-icon>
                     </button>
-                </ion-buttons>
+                </ion-buttons> -->
             </ion-toolbar>
         </ion-footer>
     </ion-menu>
