--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,15 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+@font-face{ font-family: 'Abel'; src: url('../assets/fonts/Raleway.woff2') format('woff2'); }
+@font-face{ font-family: 'Comfortaa'; src: url('../assets/fonts/Comfortaa.woff2') format('woff2'); }
+@font-face{ font-family: 'Dosis'; src: url('../assets/fonts/Dosis.woff2') format('woff2'); }
+@font-face{ font-family: 'Raleway'; src: url('../assets/fonts/Raleway.woff2') format('woff2'); }
+
+*{
+    font-family: 'Raleway';
+}
+
 .alert-ios .alert-radio-label{ white-space: pre-line;}
 .alert-md .alert-radio-label{ white-space: pre-line;}
 .alert-wp .alert-radio-label{ white-space: pre-line;}
