--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,8 +32,8 @@ $colors: (
   dark:       #222,
   customColor1:       #3396D8,
   customColor2:       #e06637,
-  
-);
+  customColor3:       #408e7a,
+  );
 
 
 // App iOS Variables
