--- a/src/components/counter-input/counter-input.html
+++ b/src/components/counter-input/counter-input.html
@@ -1,9 +1,9 @@
 <div class="counter">
-  <button no-padding ion-button round icon-only color="danger" (click)="decrease()">
+  <button ion-button round icon-only color="danger" (click)="decrease()">
     <ion-icon name="remove"></ion-icon>
   </button>
   <span class="span">{{counterValue}}</span>
-  <button no-padding ion-button round icon-only color="secondary" (click)="increase()">
+  <button ion-button round icon-only color="secondary" (click)="increase()">
     <ion-icon name="add"></ion-icon>
   </button>
 </div>
