--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -244,3 +244,11 @@ $modal-inset-min-height-large: 300px;
   height: auto;
   object-fit: contain;      
 }
+
+.button {
+  text-transform: none !important;
+}
+
+ .segment-button {
+  text-transform: none !important;
+}
