--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -45,24 +45,24 @@
     margin-top:10px;
 }
 .item-menu {
-    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
-    color: white;
+    background: lighten($color: #27303D, $amount: 3%) !important;
+    color:  lighten($color: color($colors, customColor1),$amount: 30%) ;
 }
 
 .button-small {
     font-size: 1.5em !important;
 }
 .item-menu-base {
-    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
-    border-bottom: 1px solid lighten($color: color($colors, customColor1), $amount: 10%) !important;
-    color: white;
+    background: lighten($color: #27303D, $amount: 3%) !important;
+    border-bottom:  rgb(32, 39, 50) solid 1px!important;
+    color:  lighten($color: color($colors, customColor1),$amount: 30%) ;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     
 }
 
 .item-menu-button {
-    background: lighten($color: color($colors, customColor1), $amount: 3%) !important;
-    color:whitesmoke;
+    background: lighten($color:#27303D, $amount: 3%) !important;
+    color:  lighten($color: color($colors, customColor1),$amount: 30%) ;
     height: 20px;
     font-size: 1em;
 }
