--- a/src/components/counter-input/counter-input.scss
+++ b/src/components/counter-input/counter-input.scss
@@ -5,11 +5,16 @@ counter-input {
         margin:0;
         padding:0;
         .button {
-            font-size: .6em;
+            width: 1.5em;
+            height: 1.5em;
+            font-size: 1em;
+            padding: 0.8em;            
             font-weight: bolder;
+            vertical-align: bottom;            
+            
         }
         .span {
-            margin: 0 10px 0 10px;            
+            margin: 0 5px 0 5px;            
             font-size: 1.5em;
             vertical-align: bottom;            
         }
