cadastro de forma de pagamento

--- a/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/forma-pagamento-config/forma-pagamento-config.scss
+++ b/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/forma-pagamento-config/forma-pagamento-config.scss
@@ -1,3 +1,8 @@
 page-forma-pagamento-config {
-
+    img {
+        border-radius: 0 !important;
+        width: auto;
+        height: auto;
+        object-fit: contain;                    
+    }
 }
