--- a/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/formas-pagamento.scss
+++ b/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/formas-pagamento.scss
@@ -1,5 +1,8 @@
 page-formas-pagamento {
     img {
         border-radius: 0 !important;
+        width: auto;
+        height: auto;
+        object-fit: contain;                    
     }
 }
