--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.scss
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.scss
@@ -1,3 +1,8 @@
 page-painel-controle-distribuidor-config {
-
+    img {
+        border-radius: 0 !important;
+        width: auto;
+        height: auto;
+        object-fit: contain;                    
+    }
 }
