--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,11 +20,11 @@
 @font-face{ font-family: 'ArchivoNarrow-Regular'; src: url('../assets/fonts/ArchivoNarrow-Regular.ttf') format('ttf'); }
 @font-face{ font-family: 'Quicksand'; src: url('../assets/fonts/Quicksand.woff2') format('woff2'); }
 
-
+/*
 *{
     font-family: 'Raleway';
 }
-
+*/
 .alert-ios .alert-radio-label{ white-space: pre-line;}
 .alert-md .alert-radio-label{ white-space: pre-line;}
 .alert-wp .alert-radio-label{ white-space: pre-line;}
