Iniciando Acompanhamento de Pedidos

--- a/src/pages/painel-pedidos/pedido-list-produtos/pedido-forma-pagamento/pedido-forma-pagamento.scss
+++ b/src/pages/painel-pedidos/pedido-list-produtos/pedido-forma-pagamento/pedido-forma-pagamento.scss
@@ -14,7 +14,12 @@ page-pedido-forma-pagamento {
     ion-footer {
         background-color: #ffffff !important;
     }
+    
     .content-carrinho-margin-bottom {
-        margin-bottom: 40px !important;
+        margin-bottom: 60px !important;
+    }
+    
+    .list-padding-bottom {
+        padding-bottom: 9px
     }
 }
