--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -12,12 +12,14 @@ timeline {
         position: absolute;
         top: 0;
         bottom: 0;
+        height: 110%;
         width: 10px;
         background: #afdcf8;
         //left: 20%;
         margin-left: 20px;
       }
 
+      width: 100%;
       
       position: relative;
       display: inline-block;
@@ -49,7 +51,7 @@ timeline {
       ion-icon {
         width: 40px;
         height: 40px;
-        font-size: 2.5em;
+        font-size: 2.4em;
         position: absolute;
         color: #fff;
         background: #46a4da;
