--- a/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-ditstribuidor-evoluir/detalhes-pedido-distribuidor/detalhes-pedido-distribuidor.scss
+++ b/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-ditstribuidor-evoluir/detalhes-pedido-distribuidor/detalhes-pedido-distribuidor.scss
@@ -1,4 +1,5 @@
-page-detalhes-pedido {
+page-detalhes-pedido-distribuidor {
+
     ion-list-header {
         background-color: #eeeeee !important;
         border-top: 1px solid #dedede !important;
