--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $background-color:  #fff;
 
 $colors: (
   primary:    #3396D8,
-  secondary:  #32db64,
+  secondary:  #1abc9c,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       rgb(37, 47, 61),
