--- a/src/pages/painel-pedidos/meus-pedidos/meus-pedidos.scss
+++ b/src/pages/painel-pedidos/meus-pedidos/meus-pedidos.scss
@@ -1,3 +1,7 @@
 page-meus-pedidos {
-
+    .item-finished {
+        -webkit-filter: opacity(.5);
+        -moz-filter: opacity(.5);
+        filter: opacity(.5);
+    }
 }
